tests/activitygen/errors/input_error/options.activitygen
--net-file activitygen-example.net.xml --stat-file activitygen-example.stat.xml --output-file routes.activitygen --seed 1
